--- a/laura.css
+++ b/laura.css
@@ -39,24 +39,24 @@
 }
 
 .blue {
-	  background-color: #fff;
+	  background-color: #015C00;
 	  min-height:150px;
 }
 
 .white {
-  background-color: #FEF143;
+  background-color: #02910D;
 }
 
 .orange {
-  background-color: #ED5879;
+  background-color: #BBE7FF;
 }
 
 .purp {
-  background-color: #FB5734;
+  background-color: #DBE7FF;
 }
 
 .red {
-  background-color: #2CA389;
+  background-color: #D1E8D3;
 }
 
 .green {
