--- a/laura.css
+++ b/laura.css
@@ -1,4 +1,6 @@
-
+body{
+    background-image: url("http://www.hdwallpaper.nu/wp-content/uploads/2015/09/Tropical_Beach_wallpaper_001.jpg");
+}
 .box1 {
   min-height: 40vh;
   width: 28%;
