--- a/laura.css
+++ b/laura.css
@@ -1,66 +1,31 @@
+.fond{
+    position:absolute;
+    padding-top:500px;top:0;left:0; right:0;bottom:0;
+}
 body{
     background-image: url("http://www.hdwallpaper.nu/wp-content/uploads/2015/09/Tropical_Beach_wallpaper_001.jpg");
 }
-.box1 {
-  min-height: 40vh;
-  width: 28%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 10px 10px 5px #474546;
+
+.style_prevu_kit {
+    display:inline-block;
+    border:0;
+    width:196px;
+    height:200px;
+    position: relative;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
 }
-
-.box2 {
-  min-height: 40vh;
-  width: 53%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 10px 10px 5px #474546;
+.style_prevu_kit:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.5);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
 }
-
-.box3 {
-  min-height: 40vh;
-  width: 18%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 10px 10px 5px #474546;
-}
-
-.box4 {
-  min-height: 52vh;
-  width: 46%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 10px 10px 5px #474546;
-}
-
-.box5 {
-  min-height: 52vh;
-  width: 53%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 10px 10px 5px #474546;
-}
-
-.dark_green {
-	 background-color: #015C00;
-	  min-height:253px;
-}
-
-.green {
-  background-color: #02910D;
-   min-height:253px;
-}
-
-.light_blue {
-  background-color: #BBE7FF;
-}
-
-.lighter_blue {
-  background-color: #DBE7FF;
-}
-
-.whitest_blue {
-  background-color: #D1E8D3;
-}
-
-
