--- a/laura.css
+++ b/laura.css
@@ -1,4 +1,133 @@
-
 body{
     background-image: url("http://www.hdwallpaper.nu/wp-content/uploads/2015/09/Tropical_Beach_wallpaper_001.jpg");
+}
+.container {
+  padding-left:100px; 
+  padding-right:100px;
+  padding-top:100px;
+  padding-bottom:100px;
+}
+.top {
+  padding-bottom:100px;
+}
+.box0:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+}
+.box1:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+}
+.box3:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+}
+.box4:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+}
+.box6:hover {
+    box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
+}
+.box0 {
+  height: 15%;
+  width: 15%;
+  margin: auto;
+  display: inline-table;
+  box-shadow: 5px 5px 8px #474546;
+  background-color: #DBE7FF;
+}
+.box1 {
+  height: 300px;
+  width: 25%;
+  margin: auto;
+  display: inline-table;
+  background-color: #BBE7FF;
+}
+.box2 {
+  height: 15%;
+  width: 49%;
+  margin: auto;
+  display: inline-table;
+  background-color: #AARRGGBB;
+}
+.box3 {
+  height: 300px;
+  width: 25%;
+  margin: auto;
+  display: inline-table;
+  box-shadow: 5px 5px 8px #474546;
+  background-color: #DBE7FF;
+}
+.box4 {
+  height: 300px;
+  width: 25%;
+  margin: auto;
+  display: inline-table;
+  background-color: #02910D;
+}
+.box5 {
+  height: 15%;
+  width: 49%;
+  margin: auto;
+  display: inline-table;
+  background-color: #AARRGGBB;
+}
+.box6 {
+  height: 300px;
+  width: 25%;
+  margin: auto;
+  display: inline-table;
+  box-shadow: 5px 5px 8px #474546;
+  background-color: #015C00;
+}
+h2 {
+	margin-top: 80px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	text: center;
+	text-decoration: underline;
+	vertical-align: middle;
+	position: relative;
+}
+.Aligner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.font1 {
+	font-family: "Lucida Console", Monaco, monospace
+}
+.font2 {
+	font-family: "Courier New", Courier, monospace
 }
