--- a/laura.css
+++ b/laura.css
@@ -20,7 +20,7 @@ body{
     transition: all 200ms ease-in;
     transform: scale(1.5);
 }
-.box1:hover {
+.circle1:hover {
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -ms-transition: all 200ms ease-in;
@@ -30,7 +30,7 @@ body{
     transition: all 200ms ease-in;
     transform: scale(1.5);
 }
-.box3:hover {
+.circle2:hover {
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -ms-transition: all 200ms ease-in;
@@ -40,7 +40,7 @@ body{
     transition: all 200ms ease-in;
     transform: scale(1.5);
 }
-.box4:hover {
+.circle3:hover {
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -ms-transition: all 200ms ease-in;
@@ -50,7 +50,7 @@ body{
     transition: all 200ms ease-in;
     transform: scale(1.5);
 }
-.box6:hover {
+.circle4:hover {
     box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -ms-transition: all 200ms ease-in;
@@ -60,7 +60,51 @@ body{
     transition: all 200ms ease-in;
     transform: scale(1.5);
 }
-.box0 {
+.circle1 {
+  width: 400px;
+	height: 400px;
+	-moz-border-radius: 200px;
+	-webkit-border-radius: 200px;
+	border-radius: 200px;
+  margin: auto;
+  display: inline-table;
+  background-color: #BBE7FF;
+  opacity: 0.8;
+}
+.circle2 {
+width: 400px;
+	height: 400px;
+	-moz-border-radius: 200px;
+	-webkit-border-radius: 200px;
+	border-radius: 200px;
+  margin: auto;
+  display: inline-table;
+  background-color: #DBE7FF;
+  opacity: 0.8;
+}
+.circle3 {
+width: 400px;
+	height: 400px;
+	-moz-border-radius: 200px;
+	-webkit-border-radius: 200px;
+	border-radius: 200px;
+  margin: auto;
+  display: inline-table;
+  background-color: #02910D;
+  opacity: 0.8;
+}
+.circle4 {
+ width: 400px;
+	height: 400px;
+	-moz-border-radius: 200px;
+	-webkit-border-radius: 200px;
+	border-radius: 200px;
+  margin: auto;
+  display: inline-table;
+  background-color: #015C00;
+  opacity: 0.8;
+}
+.box1 {
   height: 15%;
   width: 15%;
   margin: auto;
@@ -68,49 +112,20 @@ body{
   box-shadow: 5px 5px 8px #474546;
   background-color: #DBE7FF;
 }
-.box1 {
-  height: 300px;
-  width: 25%;
-  margin: auto;
-  display: inline-table;
-  background-color: #BBE7FF;
-}
 .box2 {
-  height: 15%;
-  width: 49%;
+   height: 15%;
+  width: 50%;
   margin: auto;
   display: inline-table;
+  box-shadow: 5px 5px 8px #474546;
   background-color: #AARRGGBB;
 }
 .box3 {
-  height: 300px;
-  width: 25%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 5px 5px 8px #474546;
-  background-color: #DBE7FF;
-}
-.box4 {
-  height: 300px;
-  width: 25%;
-  margin: auto;
-  display: inline-table;
-  background-color: #02910D;
-}
-.box5 {
   height: 15%;
-  width: 49%;
+  width: 50%;
   margin: auto;
   display: inline-table;
   background-color: #AARRGGBB;
-}
-.box6 {
-  height: 300px;
-  width: 25%;
-  margin: auto;
-  display: inline-table;
-  box-shadow: 5px 5px 8px #474546;
-  background-color: #015C00;
 }
 h2 {
 	margin-top: 80px;
