--- a/laura.css
+++ b/laura.css
@@ -144,5 +144,5 @@ h2 {
 	font-family: "Lucida Console", Monaco, monospace
 }
 .font2 {
-	font-family: "Courier New", Courier, monospace
+	font-family: "lora",
 }
