--- a/laura.css
+++ b/laura.css
@@ -109,6 +109,7 @@ body{
 	width: 15%;
 	margin: auto;
 	display: inline-table;
+	-webkit-border-radius: 200px;
 	box-shadow: 5px 5px 8px #474546;
 	background-color: #DBE7FF;
 }
